--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -47,7 +47,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 10rem;
+  margin-top: 8rem;
   
   .photo {
     display: flex;
@@ -66,17 +66,17 @@
     height: auto;
     width: 30rem;
     color: white;
-    margin: 1rem;
+    margin: 0.5rem;
 
     h2 {
       @extend .font-style;
-      font-size: 1.75rem;
+      font-size: 2rem;
       line-height: 3rem;
     }
     h1 {
       @extend .font-style;
-      font-size: 4rem;
-      margin: 1.75rem;
+      font-size: 7rem;
+      margin: 1.85rem;
     }
   
   }
@@ -87,10 +87,12 @@
       flex-direction: column;
       width: 80vw;
       margin: 2.5rem;
+
       .tech_header {
         display: flex;
         color: white;
         font-size: 1.75rem;
+        margin-bottom: 1.5rem;
       }
     }
   }
